--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,15 @@
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="318dp"
-        android:layout_height="589dp"
-        android:orientation="vertical"
+        android:layout_height="600dp"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/name"
@@ -38,14 +38,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="trusteddomain.com">
+
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text"
-                android:inputType="textMultiLine"
-                android:lines="5"
-                android:gravity="top|left"
-
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="start|top"
+
+                android:inputType="textMultiLine"
+                android:lines="5" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.FloatingActionButton
@@ -54,30 +55,15 @@
             android:layout_height="79dp"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
-            app:srcCompat="@android:drawable/ic_search_category_default" />
+            app:srcCompat="@drawable/ic_search_white_24dp" />
 
-        <ScrollView
+        <TextView
+            android:id="@+id/output"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible">
-
-                <TextView
-                    android:id="@+id/output"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:text=""
-                    android:textAlignment="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </LinearLayout>
-        </ScrollView>
+            android:layout_height="294dp"
+            android:text=""
+            android:textAlignment="center"
+            android:scrollbars="vertical"/>
 
     </LinearLayout>
 
