Asks for less messages, metadata, retrieves better
Only retrieves From and Subject headers. Asks for a max of 50 messages. Polished up UI a bit too, including number of messages scanned.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="318dp"
-        android:layout_height="600dp"
-        android:gravity="center_horizontal"
+        android:layout_height="match_parent"
+        android:gravity="top|center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,9 +61,9 @@
             android:id="@+id/output"
             android:layout_width="match_parent"
             android:layout_height="294dp"
+            android:scrollbars="vertical"
             android:text=""
-            android:textAlignment="center"
-            android:scrollbars="vertical"/>
+            android:textAlignment="center" />
 
     </LinearLayout>
 
