--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#152743">
+
 
     <LinearLayout
         android:id="@+id/layout"
@@ -25,6 +27,7 @@
             android:layout_height="wrap_content"
             android:text="@string/pre_signin"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textStyle="bold" />
 
         <com.google.android.gms.common.SignInButton
@@ -37,7 +40,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="trusteddomain.com">
+            android:hint="trusteddomain.com"
+            android:textColorHint="@android:color/white">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text"
@@ -46,7 +50,8 @@
                 android:gravity="start|top"
 
                 android:inputType="textMultiLine"
-                android:lines="5" />
+                android:lines="5"
+                android:textColor="@android:color/white" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.FloatingActionButton
@@ -63,7 +68,8 @@
             android:layout_height="294dp"
             android:scrollbars="vertical"
             android:text=""
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
